# datalab

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  docker-compose.yml  justfile  pyproject.toml
.ci/: deploy.yml  kafka.yml  ollama.yml  postgres.yml
.ci/provision/: kafka.yml  ollama.yml  postgres.yml
.ci/scripts/kafka/: create_topic.sh  init_consumer.sh
.ci/scripts/ollama/: pull.sh
.ci/scripts/postgres/: create_db.sh  create_user.sh  load_credentials.sh
.ci/templates/: deploy.yml  kafka.yml  ollama.yml  postgres.yml
.github/workflows/: release.yml
cli/: cli.py
dlctl/: cli.py  dbt_handler.py  tools.py  util.py
export/: cli.py
exports/: cli.py
graph/: analytics.py  batch.py  cli.py  embedding.py  manager.py  ops.py  rag.py  visualization.py
infra/apps/docker/: compose.yml
infra/apps/docker/mlserver/: Dockerfile  docker-entrypoint.sh
infra/foundation/: .terraform.lock.hcl  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf  versions.tf
infra/foundation/scripts/: install_minio.sh
infra/platform/: .terraform.lock.hcl  docker.tf  gitlab.tf  main.tf  outputs.tf  providers.tf  state.config.example  terraform.tfvars.example  variables.tf  versions.tf
infra/platform/templates/: docker.cloud-config.tftpl
infra/services/: compose.yml
infra/services/docker/: compose.yml
infra/services/docker/ubuntu/: Dockerfile
infra/services/gitlab/: .terraform.lock.hcl  main.tf  providers.tf  terraform.tfvars.example  variables.tf  versions.tf
infra/services/gitlab-project/: .terraform.lock.hcl  main.tf  providers.tf
infra/services/mlflow/: Dockerfile
ingest/: cli.py  fetcher.py  handler.py  parser.py  storage.py
ingest/template/: atlas.py  base.py
ml/: cli.py  events.py  features.py  inference.py  mlflow.py  monitor.py  payloads.py  server.py  synthetic.py  train.py  types.py
notebooks/: econ_comp.ipynb
scripts/: ducklake_sqlite_to_postgres_fix.sql  explore_graph.sh  export.sh  export_music_graph.sql  init.example.sql  music_taste_stats.cypher  notebook_to_markdown.sh
shared/: cache.py  color.py  lakehouse.py  logging.py  settings.py  storage.py  templates.py  tools.py  utils.py
tests/: conftest.py  fixtures.py  test_graph_ops.py  test_graph_rag.py
transform/: dbt_project.yml  profiles.yml
transform/macros/: attach_ducklake.sql  generate_alias_name.sql  generate_schema_name.sql
transform/macros/deezer_social_networks/: load_deezer_edges.sql  load_deezer_genres.sql
transform/models/deezer_social_networks/: genres.sql  hr_genres.sql  ro_genres.sql  schema.yml
transform/models/stage/deezer_social_networks/: dsn_hr_edges.sql  dsn_hr_genres.sql  dsn_hu_edges.sql  dsn_hu_genres.sql  edges.sql  (+10 more)
transform/tests/: analytics_taoec_cc_metrics_esi_range.sql  graphs_music_taste_unique_node_ids.sql  list_not_empty.sql  positive_integer.sql
transform/tests/generic/: list_not_empty.sql  positive_integer.sql
(+51 files in other folders)
