[project]
name = "datalab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.38.29",
    "boto3-stubs[s3]>=1.38.29",
    "click>=8.2.1",
    "dbt-core>=1.9.6",
    "dbt-duckdb",
    "environs>=14.2.0",
    "gitpython>=3.1.44",
    "kagglehub>=0.3.12",
    "loguru>=0.7.3",
    "minio>=7.2.15",
    "platformdirs>=4.3.8",
    "python-slugify>=8.0.4",
]

[project.scripts]
dlctl = "dlctl.cli:dlctl"

[tool.uv]
package = true

[tool.uv.sources]
dbt-duckdb = { git = "https://github.com/duckdb/dbt-duckdb.git", rev = "afc39991158c0f719e5e57469ab466cfb63fbb8c" }

[tool.setuptools.packages.find]
include = ["dlctl", "shared", "ingest", "transform"]
