# When adding/removing dependencies, first run:
# export UV_FIND_LINKS="https://data.pyg.org/whl/torch-2.7.0+cu126.html"

[project]
name = "datalab"
version = "0.3.0"
description = "Tooling for a minimalist data lab running on top of DuckLake."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "bidict>=0.23.1",
  "boto3>=1.38.29",
  "boto3-stubs[s3]>=1.38.29",
  "click>=8.2.1",
  "colorama>=0.4.6",
  "dbt-core>=1.9.6",
  "dbt-duckdb",
  "environs>=14.2.0",
  "gitpython>=3.1.44",
  "kagglehub>=0.3.12",
  "kuzu>=0.10.0",
  "langchain>=0.3.26",
  "langchain-kuzu>=0.4.2",
  "langchain-ollama>=0.3.3",
  "loguru>=0.7.3",
  "minio>=7.2.15",
  "more-itertools>=10.7.0",
  "ollama>=0.5.1",
  "pandas>=2.3.0",
  "platformdirs>=4.3.8",
  "prompt-toolkit>=3.0.51",
  "python-slugify>=8.0.4",
  "torch>=2.7.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "python-semantic-release>=9.21.1",
]

[project.scripts]
dlctl = "dlctl.cli:dlctl"

[tool.uv]
package = true

[tool.uv.sources]
dbt-duckdb = { git = "https://github.com/duckdb/dbt-duckdb.git", rev = "afc39991158c0f719e5e57469ab466cfb63fbb8c" }

[tool.pytest.ini_options]
addopts = "--capture=no --maxfail=1 --disable-warnings"

[tool.setuptools.packages.find]
include = ["dlctl", "shared", "ingest", "transform", "export", "graph"]

[tool.semantic_release]
commit_parser = "conventional"
version_toml = ["pyproject.toml:project.version"]
allow_zero_version = true

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
